--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -38,7 +38,8 @@
   .project-image {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
+    background-color: #2a2a2a;
   }
   
   .project-card-content {
